# GridLock-Engine

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: local_agent_eval.py
notebooks/: playtester_local_eval.ipynb  training_starter.ipynb
tests/: __init__.py  test_engine.py  test_forecast.py  test_metrics.py  test_metrics_contract.py  test_runner.py
watt_the_hack/: __init__.py  constants.py  playtest.py
watt_the_hack/api/: __init__.py  sandbox.py  server.py
watt_the_hack/controllers/: __init__.py  parametric.py  rule_based.py
watt_the_hack/data_loaders/: aemo.py  scenarios.py
watt_the_hack/engine/: base_engine.py  engine.py
watt_the_hack/engine/legacy engines/: simple_engine.py
watt_the_hack/metrics/: __init__.py
watt_the_hack/scenarios/synthetic/: ai_grid_shock.json  cybersecurity_sandbox.json  duck_curve.json  melbourne_cold_winter.json  operators_mandate.json
watt_the_hack/scenarios/tutorial/: t1_welcome.json
watt_the_hack/scripts/: admin_controller.py  freeze_baselines.py  generate_scenario_4.py  generate_scenario_6.py  update_notebook.py
watt_the_hack/simulation/: __init__.py  runner.py  strategy.py
